--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.8.6",
-    "react-axios": "^2.0.3",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
