--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,6 +14,7 @@
       "scripts/leaderator.js"
     ],
     "css": [
+      "styles/fonts.css",
       "styles/style.css"
     ],
     "matches": ["<all_urls>"],
