--- a/public/manifest.json
+++ b/public/manifest.json
@@ -15,6 +15,7 @@
     ],
     "css": [
       "styles/fonts.css",
+      "styles/font-awesome.css",
       "styles/style.css"
     ],
     "matches": ["<all_urls>"],
@@ -22,7 +23,10 @@
     "all_frames": true
   }],
   "web_accessible_resources": [
-    "*.html"
+    "*.html",
+    "/fonts/fa-solid-900.ttf",
+    "/fonts/fa-solid-900.woff",
+    "/fonts/fa-solid-900.woff2"
   ],
   "manifest_version": 2
 }
